--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1>Basel Qarqa</h1>
+    <h1>Computer Information System</h1>
   </body>
 </html>
